# serializer version: 1
# name: test_hydrological_station
  HydrologicalData(water_level=SensorData(name='Water Level', value=568.0, unit='cm'), flood_alarm_level=SensorData(name='Flood Alarm Level', value=630.0, unit='cm'), flood_warning_level=SensorData(name='Flood Warning Level', value=590.0, unit='cm'), water_temperature=SensorData(name='Water Temperature', value=8.1, unit='°C'), river='Zalew Wiślany', station_id='154190050', station='Nowe Batorowo', water_level_measurement_date=datetime.datetime(2024, 4, 22, 10, 0, tzinfo=datetime.timezone.utc), water_temperature_measurement_date=datetime.datetime(2024, 4, 22, 10, 10, tzinfo=datetime.timezone.utc), flood_alarm=False, flood_warning=False)
# ---
# name: test_hydrological_stations
  dict({
    '149180010': 'Odra (Krzyżanowice)',
    '149180020': 'Odra (Chałupki)',
    '149180030': 'Olza (Łaziska)',
    '149180060': 'Olza (Cieszyn)',
    '149180070': 'Młynówka (Cieszyn)',
    '149180080': 'Wisła (Drogomyśl)',
    '149180090': 'Pszczynka (Borki Mizerów)',
    '149180100': 'Wisła (Skoczów)',
    '149180110': 'Wisła (Ustroń Obłaziec)',
    '149180120': 'Brennica (Górki Wielkie)',
    '149180130': 'Olza (Istebna)',
    '149180140': 'Wisła (Wisła)',
    '149180160': 'Wisła (Wisła Czarne)',
    '149180180': 'Biała Wisełka (Wisła Czarne)',
    '149180200': 'Czarna Wisełka (Wisła Czarne)',
    '149180210': 'Wisła (Zabrzeg)',
    '149180220': 'Pszczynka (Pszczyna)',
    '149180230': 'Wapienica (Podkępie)',
    '149180240': 'Wisła (Goczałkowice)',
    '149180250': 'Iłownica (Czechowice Dziedzice)',
    '149180300': 'Odra (Olza)',
    '149190010': 'Biała (Czechowice-Bestwina)',
    '149190020': 'Bystra (Kamesznica)',
    '149190030': 'Biała (Mikuszowice)',
    '149190040': 'Woda Ujsolska (Ujsoły)',
    '149190050': 'Soła (Rajcza)',
    '149190060': 'Wisła (Jawiszowice)',
    '149190070': 'Żylica (Łodygowice)',
    '149190080': 'Soła (Cięcina)',
    '149190090': 'Żabniczanka (Żabnica)',
    '149190100': 'Soła (Żywiec)',
    '149190120': 'Soła (Czaniec (Kobiernice))',
    '149190140': 'Łękawka (Łękawica)',
    '149190150': 'Koszarawa (Pewel Mała)',
    '149190160': 'Wieprzówka (Rudze)',
    '149190170': 'Skawa (Zator)',
    '149190180': 'Skawa (Wadowice)',
    '149190200': 'Stryszawka (Sucha Beskidzka)',
    '149190210': 'Skawa (Sucha Beskidzka 2)',
    '149190220': 'Skawica (Skawica Dolna)',
    '149190230': 'Wisła (Czernichów - Prom)',
    '149190260': 'Skawa (Osielec)',
    '149190270': 'Skawinka (Radziszów)',
    '149190280': 'Czarny Dunajec (Koniówka)',
    '149190290': 'Skawa (Jordanów)',
    '149190300': 'Potok Kościeliski (Kościelisko-Kiry)',
    '149190310': 'Raba (Stróża)',
    '149190340': 'Raba (Rabka 2)',
    '149190350': 'Krzczonówka (Krzczonów)',
    '149190360': 'Lepietnica (Ludźmierz)',
    '149190370': 'Lubieńka (Lubień)',
    '149190380': 'Cicha Woda (Zakopane Harenda)',
    '149190390': 'Wielki Rogoźnik (Ludźmierz)',
    '149200010': 'Poroniec (Poronin)',
    '149200020': 'Biały Dunajec (Szaflary)',
    '149200030': 'Czarny Dunajec (Nowy Targ)',
    '149200040': 'Raba (Kasinka Mała)',
    '149200050': 'Dunajec (Nowy Targ - Kowaniec)',
    '149200060': 'Raba (Mszana Dolna)',
    '149200080': 'Mszanka (Mszana Dolna)',
    '149200090': 'Raba (Dobczyce)',
    '149200100': 'Białka (Łysa Polana)',
    '149200110': 'Białka (Trybsz 2)',
    '149200120': 'Niedziczanka (Niedzica)',
    '149200130': 'Stradomka (Stradomka)',
    '149200140': 'Dunajec (Sromowce Wyżne)',
    '149200150': 'Ochotnica (Tylmanowa)',
    '149200160': 'Dunajec (Krościenko)',
    '149200170': 'Raba (Proszówki)',
    '149200190': 'Dunajec (Gołkowice)',
    '149200200': 'Łososina (Jakubkowice)',
    '149200220': 'Poprad (Stary Sącz)',
    '149200230': 'Dunajec (Czchów)',
    '149200240': 'Dunajec (Nowy Sącz)',
    '149200250': 'Kamienica (Nowy Sącz)',
    '149200260': 'Łubinka (Nowy Sącz 1)',
    '149200270': 'Kamienic (Łabowa)',
    '149200280': 'Dunajec (Zgłobice)',
    '149200290': 'Poprad (Muszyna)',
    '149200310': 'Biała (Grybów)',
    '149200320': 'Biała (Koszyce Wielkie)',
    '149200330': 'Biała (Ciężkowice)',
    '149200360': 'Lipnica Murowana',
    '149200370': 'Uszwica (Brzesko-Okocim)',
    '149200480': 'Stradomka (Łapanów)',
    '149200510': 'Uszwica (Brzesko-Miasto)',
    '149210010': 'Ropa (Ropa)',
    '149210030': 'Ropa (Klęczany)',
    '149210040': 'Wisłoka (Łabuzie)',
    '149210050': 'Wisłoka (Krajowice)',
    '149210060': 'Ropa (Topoliny)',
    '149210070': 'Wisłoka (Żółków)',
    '149210080': 'Jasiołka (Jasło)',
    '149210090': 'Wisłoka (Krempna-Kotań)',
    '149210100': 'Jasiołka (Zboiska)',
    '149210110': 'Wisłok (Krosno)',
    '149210120': 'Stobnica (Godowa)',
    '149210130': 'Wisłok (Żarnowa)',
    '149210140': 'Morwawa (Iskrzynia)',
    '149210150': 'Wisłok (Puławy)',
    '149210160': 'Wisłok (Sieniawa)',
    '149220010': 'Pielnica (Nowosielce)',
    '149220020': 'Osława (Szczawne)',
    '149220030': 'San (Olchowce)',
    '149220040': 'San (Dynów)',
    '149220050': 'Osława (Zagórz)',
    '149220060': 'San (Lesko)',
    '149220070': 'Hoczewka (Hoczew)',
    '149220080': 'Solinka (Cisna)',
    '149220100': 'Solinka (Terka)',
    '149220110': 'Wetlina (Kalnica)',
    '149220130': 'San (Zatwarnica)',
    '149220140': 'Czarny (Polana)',
    '149220150': 'San (Dwernik)',
    '149220180': 'Wołosaty (Stuposiany)',
    '149220190': 'San (Przemyśl)',
    '149220200': 'Wiar (Krówniki)',
    '149220210': 'Wisznia (Nienowice)',
    '150140020': 'Nysa Łużycka (Sieniawka)',
    '150140030': 'Miedzianka (Turoszów)',
    '150140100': 'Miedzianka (Bogatynia)',
    '150150010': 'Kwisa (Mirsk)',
    '150150020': 'Czarny Potok (Mirsk 2)',
    '150150030': 'Kamienna (Jakuszyce)',
    '150150040': 'Kamienica (Barcinek)',
    '150150050': 'Kamienna (Piechowice)',
    '150150060': 'Bóbr (Pilchowice)',
    '150150070': 'Kamienna (Jelenia Góra 2)',
    '150150080': 'Bóbr (Jelenia Góra)',
    '150150090': 'Łomnica (Łomnica)',
    '150150100': 'Bóbr (Wojanów)',
    '150150110': 'Jedlica (Kowary)',
    '150150120': 'Bóbr (Bukówka)',
    '150150130': 'Bóbr (Błażkowa)',
    '150150190': 'Podgórna (Podgórzyn)',
    '150150200': 'Sośniak (Sosnówka)',
    '150160010': 'Bóbr (Kamienna Góra)',
    '150160020': 'Pełcznica (Świebodzice)',
    '150160030': 'Strzegomka (Chwaliszów)',
    '150160040': 'Klikawa (Kudowa Zdrój-Zakrze)',
    '150160060': 'Bystrzyca (Jugowice)',
    '150160070': 'Bystrzyca (Lubachów)',
    '150160080': 'Ścinawka (Tłumaczów)',
    '150160090': 'Strzegomka (Łażany)',
    '150160100': 'Ścinawka (Gorzuchów)',
    '150160110': 'Bystrzyca Dusznicka (Szalejów Dolny)',
    '150160120': 'Bystrzyca (Krasków)',
    '150160130': 'Piława (Mościsko)',
    '150160140': 'Piława (Dzierżoniów)',
    '150160150': 'Bystrzyca (Bystrzyca Kłodzka 2)',
    '150160160': 'Bystrzyca (Mietków)',
    '150160170': 'Nysa Kłodzka (Bystrzyca Kłodzka)',
    '150160180': 'Nysa Kłodzka (Kłodzko)',
    '150160190': 'Nysa Kłodzka (Międzylesie)',
    '150160200': 'Biała Lądecka (Żelazno)',
    '150160210': 'Wilczka (Wilkanów)',
    '150160220': 'Nysa Kłodzka (Bardo Śląskie)',
    '150160230': 'Biała Lądecka (Lądek Zdrój)',
    '150160250': 'Ślęza (Białobrzezie)',
    '150160270': 'Budzówka (Kamieniec Ząbkowicki)',
    '150160280': 'Ślęza (Borów)',
    '150160290': 'Czarna Woda (Gniechowice)',
    '150170010': 'Oława (Zborowice)',
    '150170030': 'Oława (Oława 2)',
    '150170040': 'Odra (Oława)',
    '150170050': 'Biała Głuchołaska (Biała Nyska)',
    '150170060': 'Nysa Kłodzka (Nysa)',
    '150170070': 'Biała Głuchołaska (Głuchołazy)',
    '150170080': 'Złoty Potok (Jarnołtówek)',
    '150170090': 'Odra (Brzeg (most))',
    '150170100': 'Nysa Kłodzka (Kopice)',
    '150170110': 'Prudnik (Prudnik)',
    '150170120': 'Ścinawa Niemodlińska (Niemodlin)',
    '150170130': 'Odra (Ujście Nysy Kłodzkiej)',
    '150170140': 'Nysa Kłodzka (Skorogoszcz)',
    '150170150': 'Stobrawa (Karłowice (Wapienniki))',
    '150170160': 'Opawa (Branice 1)',
    '150170170': 'Młynówka (Branice 2)',
    '150170180': 'Osobłoga (Racławice Śląskie)',
    '150170200': 'Bogacica (Domaradz)',
    '150170220': 'Biała (Dobra)',
    '150170290': 'Odra (Opole - Groszowice)',
    '150180010': 'Stradunia (Kamionka)',
    '150180020': 'Mała Panew (Turawa)',
    '150180030': 'Odra (Koźle)',
    '150180040': 'Psina (Bojanów)',
    '150180050': 'Mała Panew (Ozimek)',
    '150180060': 'Odra (Racibórz Miedonia)',
    '150180070': 'Kłodnica (Lenartowice)',
    '150180080': 'Bierawka (Grabówka)',
    '150180100': 'Mała Panew (Staniszcze Wielkie)',
    '150180110': 'Ruda (Ruda Kozielska)',
    '150180130': 'Ruda (Rybnik Stodoły)',
    '150180150': 'Kłodnica (Pyskowice Dzierżno)',
    '150180160': 'Drama (Pyskowice Dzierżno)',
    '150180170': 'Drama (Pyskowice)',
    '150180180': 'Kłodnica (Gliwice-Łabędy)',
    '150180190': 'Mała Panew (Krupski Młyn)',
    '150180210': 'Liswarta (Niwki)',
    '150180220': 'Kłodnica (Gliwice)',
    '150180270': 'Brynica (Kozłowa Góra)',
    '150180280': 'Ruda (Rybnik Gotartowice)',
    '150190010': 'Brynica (Brynica)',
    '150190060': 'Gostynia (Bojszowy)',
    '150190070': 'Szabelnia',
    '150190080': 'Czarna Przemsza (Radocha)',
    '150190100': 'Biała Przemsza (Niwka)',
    '150190120': 'Czarna Przemsza (Przeczyce)',
    '150190130': 'Czarna Przemsza (Łagisza)',
    '150190140': 'Wisła (Bieruń Nowy)',
    '150190150': 'Warta (Poraj)',
    '150190160': 'Soła (Oświęcim)',
    '150190170': 'Wisła (Pustynia)',
    '150190180': 'Przemsza (Jeleń)',
    '150190190': 'Przemsza (Piwoń)',
    '150190200': 'Warta (Lgota Nadwarcie)',
    '150190210': 'Mitręga (Kuźnica Sulikowska)',
    '150190240': 'Warta (Kręciwilk)',
    '150190260': 'Wisła (Smolice)',
    '150190280': 'Pilica (Wąsosz)',
    '150190310': 'Rudawa (Balice)',
    '150190330': 'Prądnik (Ojców)',
    '150190340': 'Wisła (Kraków - Bielany)',
    '150190350': 'Czarna (Januszewice)',
    '150190360': 'Wisła (Gromiec)',
    '150200010': 'Biała Nida (Mniszek)',
    '150200020': 'Wierna Rzeka (Bocheniec)',
    '150200030': 'Nida (Brzegi)',
    '150200040': 'Czarna Nida (Tokarnia)',
    '150200050': 'Mierzawa (Michałów)',
    '150200060': 'Wisła (Sierosławice)',
    '150200070': 'Szreniawa (Biskupice)',
    '150200080': 'Nida (Pinczów)',
    '150200090': 'Bobrza (Slowik)',
    '150200100': 'Wisła (Popędzynka)',
    '150200120': 'Czarna Nida (Morawica)',
    '150200140': 'Uszwica (Borzęcin)',
    '150200150': 'Wisła (Karsy)',
    '150200160': 'Czarna Nida (Daleszyce)',
    '150200170': 'Dunajec (Żabno)',
    '150210010': 'Czarna (Raków)',
    '150210020': 'Wisła (Szczucin)',
    '150210030': 'Łagowica (Mocha)',
    '150210040': 'Świślin (Rzepin)',
    '150210060': 'Czarna (Staszów)',
    '150210070': 'Bren (Wampierzów)',
    '150210080': 'Kamienna (Nietulisko Duże)',
    '150210090': 'Kamienna (Kunów)',
    '150210100': 'Czarna (Połaniec)',
    '150210110': 'Grabinianka (Głowaczowa)',
    '150210120': 'Wisłoka (Mielec 2)',
    '150210130': 'Wisłoka (Pustków)',
    '150210140': 'Wielopolka (Brzeźnica)',
    '150210150': 'Wisła (Koło)',
    '150210160': 'Koprzywianka (Koprzywnica)',
    '150210170': 'Wisła (Sandomierz)',
    '150210180': 'Wisła (Annopol)',
    '150210190': 'Wisła (Zawichost)',
    '150210200': 'Łęg (Grębów)',
    '150210210': 'San (Radomysl)',
    '150210220': 'Pokrzywianka (Włochy)',
    '150220010': 'Wisłok (Rzeszów)',
    '150220020': 'Bukowa (Ruda Jastkowska)',
    '150220030': 'San (Nisko)',
    '150220040': 'Trzebośnica (Sarzyna)',
    '150220050': 'Tanew (Harasiuki)',
    '150220060': 'Mleczka Zachodnia (Gorliczyna)',
    '150220070': 'San (Rzuchów)',
    '150220080': 'Wisłok (Tryńcza)',
    '150220090': 'San (Leżachów)',
    '150220100': 'San (Jarosław)',
    '150220110': 'Biała Łada (Biłgoraj)',
    '150220120': 'Pór (Zakłodzie)',
    '150220130': 'Lubaczówka (Zapałów)',
    '150220140': 'Szkło (Charytany)',
    '150220160': 'Tanew (Osuchy)',
    '150230010': 'Wieprz (Nielisz)',
    '150230040': 'Wieprz (Krasnystaw)',
    '150230070': 'Huczwa (Gozdów)',
    '150230080': 'Wieprz (Michałów)',
    '150240010': 'Bug (Strzyżów)',
    '150240020': 'Bug (Kryłów)',
    '151140010': 'Nysa Łużycka (Gubin)',
    '151140020': 'Lubsza (Pleśno)',
    '151140030': 'Skroda (Przewoźniki)',
    '151140040': 'Nysa Łużycka (Przewóz)',
    '151140050': 'Witka (Ręczyn)',
    '151140060': 'Nysa Łużycka (Zgorzelec)',
    '151150020': 'Witka (Ostróżno)',
    '151150030': 'Czerna Mała (Iłowa)',
    '151150040': 'Bóbr (Nowogród Bobrzański)',
    '151150050': 'Bóbr (Dobroszów Wielki)',
    '151150060': 'Kwisa (Leśna)',
    '151150070': 'Czerna Wielka (Żagań)',
    '151150080': 'Bóbr (Żagań)',
    '151150090': 'Kwisa (Łozy)',
    '151150100': 'Kwisa (Nowogrodziec)',
    '151150110': 'Kwisa (Gryfów Śląski)',
    '151150120': 'Bóbr (Szprotawa)',
    '151150130': 'Szprotawa (Szprotawa 2)',
    '151150140': 'Bóbr (Dąbrowa Bolesławiecka)',
    '151150150': 'Odra (Nowa Sól)',
    '151150160': 'Skora (Zagrodno)',
    '151150170': 'Kaczawa (Świerzawa)',
    '151150180': 'Skora (Chojnów)',
    '151160020': 'Kaczawa (Rzymówka)',
    '151160040': 'Czarna Woda (Bukowna)',
    '151160050': 'Kaczawa (Dunino)',
    '151160060': 'Odra (Głogów)',
    '151160070': 'Nysa Szalona (Winnica)',
    '151160080': 'Czarna Woda (Rzeszotary)',
    '151160090': 'Nysa Szalona (Jawor)',
    '151160100': 'Kaczawa (Piątnica)',
    '151160130': 'Odra (Ścinawa)',
    '151160140': 'Barycz (Osetno)',
    '151160150': 'Odra (Malczyce)',
    '151160160': 'Polski Rów (Rydzyna)',
    '151160170': 'Odra (Brzeg Dolny)',
    '151160180': 'Strzegomka (Bogdaszowice)',
    '151160190': 'Bystrzyca (Jarnołtów)',
    '151160200': 'Orla (Korzeńsko)',
    '151160220': 'Sąsiecznica (Kanclerzowice)',
    '151160230': 'Ślęza (Ślęza)',
    '151170010': 'Widawa (Krzyżanowice)',
    '151170030': 'Odra (Trestno)',
    '151170040': 'Barycz (Łąki)',
    '151170050': 'Widawa (Zbytowa)',
    '151170060': 'Polska Woda (Bogdaj)',
    '151170070': 'Barycz (Odolanów)',
    '151170080': 'Kuroch (Odolanów 2)',
    '151170090': 'Widawa (Namysłów)',
    '151170110': 'Prosna (Bogusław)',
    '151180010': 'Ołobok (Ołobok)',
    '151180020': 'Prosna (Piwonice)',
    '151180030': 'Niesób (Kuźnica Skakawska)',
    '151180040': 'Prosna (Mirków)',
    '151180050': 'Swędrnia (Dębe)',
    '151180060': 'Łużyca (Kraszewice)',
    '151180070': 'Prosna (Gorzów Śląski)',
    '151180080': 'Warta (Sieradz)',
    '151180090': 'Oleśnica (Niechmirów)',
    '151180100': 'Warta (Osjaków)',
    '151180110': 'Warta (Uniejów)',
    '151180120': 'Warta (Burzenin)',
    '151180130': 'Warta (Działoszyn)',
    '151180140': 'Widawka (Podgórze)',
    '151180150': 'Nieciecz (Widawa)',
    '151180160': 'Ner (Poddębice)',
    '151180170': 'Widawka (Rogóźno)',
    '151180180': 'Grabia (Grabno)',
    '151190010': 'Liswarta (Kule)',
    '151190020': 'Widawka (Szczerców)',
    '151190030': 'Grabia (Łask)',
    '151190040': 'Ner (Lutomiersk)',
    '151190060': 'Warta (Bobry)',
    '151190080': 'Luciąża (Kłudzice)',
    '151190090': 'Pilica (Przedbórz)',
    '151190100': 'Pilica (Sulejów)',
    '151190120': 'Czarna (Dąbrowa)',
    '151200020': 'Pilica (Spała)',
    '151200080': 'Drzewiczka (Odrzywół)',
    '151200090': 'Pilica (Nowe Miasto/Pilicą)',
    '151200100': 'Kamienna (Bzin)',
    '151200120': 'Pilica (Białobrzegi)',
    '151210010': 'Kamienna (Wąchock)',
    '151210020': 'Kamienna (Michałów 2)',
    '151210040': 'Kamienna (Brody Iłżeckie)',
    '151210050': 'Wiała (Gusin)',
    '151210060': 'Radomka (Rogożek)',
    '151210080': 'Iłżanka (Kazanów)',
    '151210090': 'Kamienna (Czekarzewice)',
    '151210120': 'Wisła (Dęblin)',
    '151210190': 'Wisła (Puławy)',
    '151220010': 'Wieprz (Kośmin)',
    '151220080': 'Tyśmienica (Tchórzew)',
    '151220090': 'Wieprz (Lubartów)',
    '151220100': 'Bystrzyca (Sobianowice)',
    '151230010': 'Wieprz (Trawniki)',
    '151230040': 'Bug (Włodawa)',
    '151230060': 'Bug (Dorohusk)',
    '152140010': 'Odra (Bielinek)',
    '152140020': 'Odra (Gozdowice)',
    '152140050': 'Odra (Słubice)',
    '152140060': 'Odra (Kostrzyn n. Odrą)',
    '152140070': 'Warta (Kostrzyn n. Odrą)',
    '152140090': 'Odra (Biała Góra)',
    '152140130': 'Odra (Połęcko)',
    '152150010': 'Warta (Świerkocin)',
    '152150020': 'Bóbr (Stary Raduszec)',
    '152150040': 'Warta (Gorzów Wielkopolski)',
    '152150050': 'Odra (Nietków)',
    '152150080': 'Warta (Santok 2)',
    '152150090': 'Noteć (Santok)',
    '152150100': 'Obra (Bledzew)',
    '152150110': 'Warta (Skwierzyna)',
    '152150130': 'Odra (Cigacice)',
    '152150140': 'Noteć (Gościmiec)',
    '152150190': 'Noteć (Nowe Drezdenko)',
    '152150200': 'Warta (Międzychód)',
    '152150240': 'Drawa (Drawiny)',
    '152150270': 'jez. Błędno (Zbąszyń)',
    '152160010': 'Noteć (Krzyż)',
    '152160050': 'Warta (Wronki)',
    '152160070': 'Noteć (Czarnków)',
    '152160090': 'Kanał Mosiński (Kościan)',
    '152160100': 'Warta (Oborniki)',
    '152160110': 'Wełna (Kowanówko)',
    '152160120': 'Flinta (Ryczywół)',
    '152160130': 'Kanał Mosiński (Mosin)',
    '152160140': 'Warta (Poznań Most Rocha)',
    '152170010': 'Warta (Śrem)',
    '152170060': 'Warta (Nowa Wieś Podgórna)',
    '152170080': 'Warta (Pyzdry)',
    '152170120': 'Wrześnica (Samarzewo)',
    '152170130': 'Warta (Ląd)',
    '152170150': 'Bawół (Trąbczyn)',
    '152180030': 'Noteć (Pakość)',
    '152180050': 'Warta (Sławsk)',
    '152180060': 'Powa (Posoka)',
    '152180110': 'Kiełbaska (Kościelec)',
    '152180120': 'Warta (Koło)',
    '152180140': 'Rgilewka (Grzegorzew)',
    '152180150': 'Ner (Dąbie)',
    '152180160': 'Kanał Ślesiński (Konin-Morzysław)',
    '152180170': 'Zb. Gopło (Popowo)',
    '152190030': 'Wisła (Włocławek)',
    '152190050': 'Bzura (Kwiatkówek)',
    '152190100': 'Mroga (Bielawy)',
    '152190120': 'Wisła (Kępa Polska)',
    '152200010': 'Rawka (Kęszyce)',
    '152200020': 'Wkra (Trzciniec)',
    '152200030': 'Wisła (Wyszogród)',
    '152200050': 'Bzura (Żuków)',
    '152200090': 'Utrata (Krubice)',
    '152200110': 'Wisła (Modlin)',
    '152200120': 'Wkra (Borkowo)',
    '152200130': 'Narew (Orzechowo)',
    '152200150': 'Wisła (Wychódźc)',
    '152210010': 'Wisła (Warszawa)',
    '152210020': 'Jeziorka (Piaseczno)',
    '152210030': 'Orzyc (Maków Mazowiecki)',
    '152210040': 'Wisła (Warszawa - Nadwilanówka)',
    '152210060': 'Narew (Zambski Kościelne)',
    '152210070': 'Świder (Wólka Mlądzka)',
    '152210090': 'Bug (Wyszków)',
    '152210100': 'Orz (Czarnowo)',
    '152210120': 'Liwiec (Łochów)',
    '152210150': 'Zb. Dębe (Popowo)',
    '152210170': 'Wisła (Warszawa-Bulwary)',
    '152220010': 'Liwiec (Zaliwie-Piegawki)',
    '152220050': 'Bug (Frankopol)',
    '152220070': 'Nurzec (Brańsk)',
    '152220080': 'Narew (Suraż)',
    '152229999': 'Bug (Małkinia)',
    '152230030': 'Orlanka (Chraboły)',
    '152230040': 'Narew (Ploski)',
    '152230070': 'Krzna (Malowa Góra)',
    '152230080': 'Bug (Krzyczew)',
    '152230090': 'Narew (Narew)',
    '152230100': 'Narewka (Narewka)',
    '152230110': 'Zb Siemianówka (Bondary - Siemianówka)',
    '152230120': 'Zb Siemianówka (Bondary - Siemianówka)',
    '152230190': 'Narewka (Białowieża)',
    '152230200': 'Bug (Zabuże)',
    '153140010': 'Zatoka Pomorska (ujście Świny) (Świnoujście)',
    '153140020': 'Odra (Widuchowa)',
    '153140030': 'Odra (Gryfino)',
    '153140040': 'Zalew Szczeciński (Trzebież)',
    '153140050': 'Odra (Szczecin)',
    '153140060': 'Dziwna (Wolin)',
    '153140070': 'Dziwna (Dziwnów)',
    '153140090': 'Ina (Goleniów)',
    '153140190': 'Regalica (Regalica Szczecin)',
    '153140200': 'jez.Miedwie (Morzyczyn)',
    '153150010': 'Ina (Stargard)',
    '153150050': 'Rega (Resko)',
    '153160020': 'Parsęta (Tychówko)',
    '153160040': 'jez. Drawsko (Czaplinek)',
    '153160170': 'Noteć (Ujście)',
    '153160180': 'Gwda (Piła)',
    '153160210': 'Gwda (Ptusza)',
    '153160300': 'jez. Wielimskie (Wielimie)',
    '153170010': 'Noteć (Białośliwie)',
    '153170040': 'Łobżonka (Wyrzysk)',
    '153170100': 'Noteć (Nakło-Zachód)',
    '153170120': 'Brda (Tuchola)',
    '153170140': 'Brda (Smukała)',
    '153180010': 'Wda (Czarna Woda)',
    '153180020': 'Wisła (Fordon)',
    '153180030': 'Wierzyca (Bożepole)',
    '153180060': 'Wda (Krąplewice)',
    '153180080': 'Wisła (Chełmno)',
    '153180090': 'Wisła (Toruń)',
    '153180100': 'Wisła (Grudziądz)',
    '153180110': 'Wierzyca (Brody Pomorskie)',
    '153180120': 'Bałtyk (Hel)',
    '153180130': 'Liwa (Kwidzyn)',
    '153180140': 'Drwęca (Elgiszewo)',
    '153180150': 'Osa (Rogóźno)',
    '153190040': 'Dzierzgoń (Bągart)',
    '153190050': 'Drwęca (Brodnica)',
    '153190090': 'Drwęca (Nowe Miasto Lubawskie)',
    '153190120': 'Drwęca (Rodzone)',
    '153190130': 'Wel (Kuligi (Nowe Miasto))',
    '153190150': 'Wel (Lidzbark)',
    '153190170': 'Jez. Drwęckie (Ostróda)',
    '153200020': 'Mławka (Szreńsk)',
    '153200030': 'Pasłęka (Kalisty)',
    '153200040': 'Pasłęka (Tomaryny)',
    '153200070': 'Łyna (Olsztyn)',
    '153200090': 'Jez. Wadąg (Szypry)',
    '153210070': 'Omulew (Białobrzeg Bliższy)',
    '153210090': 'Narew (Ostrołęka)',
    '153210120': 'Rozoga (Walery)',
    '153210140': 'Szkwa (Szkwa)',
    '153210170': 'Pisa (Ptaki)',
    '153210180': 'Ruź (Zaruzie)',
    '153210190': 'Pisa (Pisz)',
    '153210200': 'Jez. Roś (Maldanin)',
    '153210210': 'Narew (Nowogród)',
    '153210220': 'Pisa (Dobrylas)',
    '153220010': 'Narew (Piątnica-Łomża)',
    '153220050': 'Jez. Ełckie (Ełk 2)',
    '153220060': 'Ełk (Ełk)',
    '153220070': 'Narew (Wizna)',
    '153220080': 'Ełk (Prostki)',
    '153220090': 'Wissa (Czachy)',
    '153220100': 'Biebrza (Burzyn)',
    '153220130': 'Narew (Strękowa Góra)',
    '153220140': 'Ełk (Kanał.Rudzki) (Przechody)',
    '153220160': 'Ełk (Kanał Rudzki) (Osowiec 2)',
    '153220170': 'Biebrza (Osowiec)',
    '153220180': 'Ślina (Zawady)',
    '153220190': 'Jez.Rajgrodzkie (Rajgród 2)',
    '153220200': 'Jegrznia (Rajgród)',
    '153220230': 'Nereśl (Kulesze Chobotki)',
    '153220260': 'Biebrza (Dębowo)',
    '153220270': 'Narew (Babino)',
    '153220280': 'Netta (Białobrzegi)',
    '153230010': 'Supraśl (Fasty)',
    '153230020': 'Brzozówka (Karpowicze)',
    '153230060': 'Biała (Zawady)',
    '153230070': 'Biebrza (Sztabin)',
    '153230080': 'Czarna (Sochonie)',
    '153230110': 'Supraśl (Supraśl)',
    '153230130': 'Sidra (Harasimowicze)',
    '153230170': 'Supraśl (Nowosiółki)',
    '154150010': 'Rega (Trzebiatów)',
    '154150030': 'Bałtyk (Kołobrzeg)',
    '154150040': 'Parsęta (Bardy)',
    '154150050': 'Parsęta (Białogard)',
    '154160020': 'Radew (Białogórzyno)',
    '154160070': 'Wieprza (Stary Kraków)',
    '154160110': 'Bałtyk (Ustka)',
    '154160120': 'Wieprza (Korzybie)',
    '154160150': 'Wieprza (Darłowo)',
    '154170010': 'Słupia (Słupsk)',
    '154170060': 'Łupawa (Smołdzino)',
    '154170080': 'Łupawa (Łupawa)',
    '154170090': 'Jez. Łebsko (Izbica)',
    '154170100': 'Bałtyk (Łeba)',
    '154170120': 'Słupia (Soszyca)',
    '154170160': 'Łeba (Lębork)',
    '154170190': 'Jez. Raduńskie Górne (Borucino)',
    '154180020': 'Łeba (Miłoszewo)',
    '154180060': 'Radunia (Goręczyno)',
    '154180080': 'Reda (Wejherowo)',
    '154180090': 'Zatoka Pucka (Puck)',
    '154180100': 'Bałtyk (Władysławowo)',
    '154180120': 'Bałtyk (Gdynia)',
    '154180140': 'Gdańsk',
    '154180150': 'Wisła (Tczew)',
    '154180160': 'Martwa Wisła (Sobieszewo)',
    '154180170': 'Motława (Wiślina)',
    '154180180': 'Bielawa (Suchy Dąb)',
    '154180190': 'Wisła (Przegalina)',
    '154180200': 'Wisła (Świbno)',
    '154180210': 'Wisła (Ujście Wisły)',
    '154180220': 'Wisła (Gdańska Głowa)',
    '154180260': 'Kanał Raduni (Pruszcz Gdański_kanał)',
    '154180270': 'Radunia (Pruszcz Gdański)',
    '154190010': 'Święta (Nowy Dwór Gdański)',
    '154190020': 'Szkarpawa (Tujsk)',
    '154190030': 'Zalew Wiślany (Osłonka)',
    '154190040': 'Nogat (Dolna Kępa)',
    '154190050': 'Zalew Wiślany (Nowe Batorowo)',
    '154190060': 'Elbląg (Elbląg)',
    '154190080': 'Jez. Drużno (Żukowo)',
    '154190090': 'Zalew Wiślany (Tolkmicko)',
    '154190100': 'Wąska (Pasłęk)',
    '154190110': 'Bauda (Nowe Sadłuki)',
    '154190130': 'Zalew Wiślany (Nowa Pasłęka)',
    '154190140': 'Pasłęka (Braniewo)',
    '154190150': 'Jez. Pierzchalskie; Pasłęka (Pierzchały)',
    '154190160': 'Jez. Pierzchalskie; Pasłęka (Pierzchały)',
    '154190170': 'Pasłęka (Łozy)',
    '154200010': 'Wałsza (Bornity)',
    '154200020': 'Drwęca Warmińska (Krosno)',
    '154200030': 'Łyna (Smolajny)',
    '154210010': 'Łyna (Sępopol)',
    '154210020': 'Guber (Prosna)',
    '154210060': 'Jez. Mamry (Przystań)',
    '154210070': 'Węgorapa (Węgorzewo)',
    '154210080': 'Węgorapa (Prynowo)',
    '154210090': 'Pisa (Kanał Giżycki) (Giżycko)',
    '154210100': 'Węgorapa (Mieduniszki)',
    '154220010': 'Gołdapa (Banie Mazurskie)',
    '154220050': 'Jarka (Jurkiszki)',
    '154220110': 'Gołdapa (Gołdap 2)',
  })
# ---
# name: test_weather_station
  WeatherData(temperature=SensorData(name='Temperature', value=0.8, unit='°C'), humidity=SensorData(name='Humidity', value=93.0, unit='%'), pressure=SensorData(name='Pressure', value=1022.1, unit='hPa'), wind_speed=SensorData(name='Wind Speed', value=1.0, unit='m/s'), wind_direction=SensorData(name='Wind Direction', value=310.0, unit='°'), precipitation=SensorData(name='Precipitation', value=18.1, unit='mm'), station='Bielsko Biała', station_id='12600', measurement_date=datetime.datetime(2024, 4, 22, 7, 0, tzinfo=datetime.timezone.utc))
# ---
# name: test_weather_stations
  dict({
    '12001': 'Platforma',
    '12100': 'Kołobrzeg',
    '12105': 'Koszalin',
    '12115': 'Ustka',
    '12120': 'Łeba',
    '12125': 'Lębork',
    '12135': 'Hel',
    '12155': 'Gdańsk',
    '12160': 'Elbląg',
    '12185': 'Kętrzyn',
    '12195': 'Suwałki',
    '12200': 'Świnoujście',
    '12205': 'Szczecin',
    '12210': 'Resko',
    '12215': 'Szczecinek',
    '12230': 'Piła',
    '12235': 'Chojnice',
    '12250': 'Toruń',
    '12270': 'Mława',
    '12272': 'Olsztyn',
    '12280': 'Mikołajki',
    '12285': 'Ostrołęka',
    '12295': 'Białystok',
    '12300': 'Gorzów',
    '12310': 'Słubice',
    '12330': 'Poznań',
    '12345': 'Koło',
    '12360': 'Płock',
    '12375': 'Warszawa',
    '12385': 'Siedlce',
    '12399': 'Terespol',
    '12400': 'Zielona Góra',
    '12415': 'Legnica',
    '12418': 'Leszno',
    '12424': 'Wrocław',
    '12435': 'Kalisz',
    '12455': 'Wieluń',
    '12465': 'Łódź',
    '12469': 'Sulejów',
    '12488': 'Kozienice',
    '12495': 'Lublin',
    '12497': 'Włodawa',
    '12500': 'Jelenia Góra',
    '12510': 'Śnieżka',
    '12520': 'Kłodzko',
    '12530': 'Opole',
    '12540': 'Racibórz',
    '12550': 'Częstochowa',
    '12560': 'Katowice',
    '12566': 'Kraków',
    '12570': 'Kielce',
    '12575': 'Tarnów',
    '12580': 'Rzeszów',
    '12585': 'Sandomierz',
    '12595': 'Zamość',
    '12600': 'Bielsko Biała',
    '12625': 'Zakopane',
    '12650': 'Kasprowy Wierch',
    '12660': 'Nowy Sącz',
    '12670': 'Krosno',
    '12690': 'Lesko',
    '12695': 'Przemyśl',
  })
# ---
